longhorn-system/ingressroute-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`longhorn.local`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
    middlewares:
    - name: longhorn-admin-basicauth
